fixed spacing on challenges projects

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,6 +1,8 @@
 @import "../../global.scss";
 
 .contact {
+  background-image: linear-gradient(rgb(244, 248, 254), rgb(156, 196, 255));
+
   background-color: white;
   display: flex;
 
